--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fredoka:wght@300..700&display=swap"
       rel="stylesheet"
     />
-    <title>Daydreamer 🗓️</title>
+    <title>DoodleDay 🗓️</title>
   </head>
   <body>
     <div id="root"></div>
